--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-	"name": "techbot",
-	"version": "1.0.0",
-	"description": "AI-powered TechBot for Slack that summarizes tech articles and generates discussion questions",
-	"main": "dist/index.js",
-	"type": "module",
-	"scripts": {
-		"build": "tsc",
-		"start": "node dist/index.js",
-		"dev": "tsx src/index.ts",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"keywords": [
-		"slack",
-		"ai",
-		"rss",
-		"tech",
-		"bot"
-	],
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"jsdom": "^26.0.0",
-		"node-fetch": "2",
-		"playwright": "^1.49.1",
-		"rss-parser": "^3.13.0",
-		"dotenv": "^16.4.5"
-	},
-	"devDependencies": {
-		"@types/jsdom": "^21.1.7",
-		"@types/node-fetch": "^2.6.12",
-		"@types/node": "^20.11.0",
-		"typescript": "^5.3.0",
-		"tsx": "^4.7.0"
-	}
+  "name": "techbot",
+  "version": "1.0.0",
+  "description": "AI-powered TechBot for Slack that summarizes tech articles and generates discussion questions",
+  "main": "dist/index.js",
+  "type": "module",
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "tsx src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "slack",
+    "ai",
+    "rss",
+    "tech",
+    "bot"
+  ],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@slack/web-api": "^7.9.3",
+    "dotenv": "^16.4.5",
+    "jsdom": "^26.0.0",
+    "node-fetch": "2",
+    "playwright": "^1.49.1",
+    "rss-parser": "^3.13.0"
+  },
+  "devDependencies": {
+    "@types/jsdom": "^21.1.7",
+    "@types/node": "^20.11.0",
+    "@types/node-fetch": "^2.6.12",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.0"
+  }
 }
